--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="col-3">
               <input
-                type="submit"
+              type="submit"
                 value="Search"
                 class="form-control btn btn-primary shadow-sm"
               />
@@ -50,7 +50,7 @@
         <ul>
           <li id="date"></li>
           <li>
-            Partly Cloudy
+            Partly cloudy
           </li>
         </ul>
         <div class="row">
